k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  selector:
    app: backend
